--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <link rel="apple-touch-icon" href="https://i.ibb.co.com/X7JM3jJ/IMG-20241002-WA0014.jpg">
 	<meta http-equiv="Content-Security-Policy" content="default-src * 'self' 'unsafe-inline' 'unsafe-eval' data: gap:">
 	<title>Mitra Bukalapak</title><link rel="icon" type="image/png" href="https://i.ibb.co.com/X7JM3jJ/IMG-20241002-WA0014.jpg"/>
-<link rel="image_src" href="https://hosting.tigerengine.id/cu3s4j.webp"/>
+<link rel="image_src" href="https://hosting.tigerengine.id/x87e8g.png"/>
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@800&display=swap');
 }
